backend/reviewrating-service/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-rating-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: review-rating-service
                port:
                  number: 9097
          - path: /aggregator
            pathType: Prefix
            backend:
              service:
                name: rating-aggregator-service
                port:
                  number: 9096
